# windbg-extensions

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build_utils.ps1  setup_prompt_instructions.ps1
.github/instructions/: javascript_extension.instructions.md  native_extension.instructions.md
cmake/: GenerateStartupCommands.cmake
docs/: chromium_debugging.instructions.md  commands.md  mcp_server_setup.md  windbg_extensions_guide.md  windbg_mcp.instructions.md  windbg_mcp_chromium.instructions.md
scripts/: callback_location.js  continuation_commands.js  type_signatures.js
src/: break_commands.cpp  breakpoint.cpp  breakpoint.h  breakpoint_list.cpp  breakpoint_list.h  breakpoints_history.cpp  command_list.cpp  command_list.h  command_lists.cpp  command_logger.cpp  debug_event_callbacks.h  js_command_wrappers.cpp  mcp_server.cpp  mcp_server_stdio_bridge.cpp  step_through_mojo.cpp  utils.cpp  utils.h
tests/: CMakeLists.txt  debug_interfaces_test_base.h  mock_debug_interfaces.h  test_break_commands.cpp  test_breakpoint_list.cpp  test_breakpoints_history.cpp  test_utils.cpp  unit_test_runner.h
tests/mocks/: mock_debug_client.h  mock_debug_control.h  mock_debug_data_spaces.h  mock_debug_interface_base.h  mock_debug_registers.h  mock_debug_symbols.h  mock_debug_system_objects.h
